[gd_scene load_steps=11 format=4 uid="uid://dte8qic8phasx"]

[ext_resource type="TileSet" uid="uid://cw45kfg2c8mfk" path="res://assets/Growth/premade/HouseTileSet.tres" id="1_cl7kl"]
[ext_resource type="Script" uid="uid://ca14e4fgn54fs" path="res://Scenes/Level/house.gd" id="1_sshqa"]
[ext_resource type="Texture2D" uid="uid://dpvg3yddudamn" path="res://assets/Growth/graphics/tilesets/walls_floor_tile.png" id="2_cglu6"]
[ext_resource type="Texture2D" uid="uid://cwbhys0nypuq" path="res://assets/Growth/graphics/tilesets/roof.png" id="4_hg4oa"]
[ext_resource type="PackedScene" uid="uid://brjys8tcq54ps" path="res://Scenes/tv.tscn" id="5_6opaa"]
[ext_resource type="PackedScene" uid="uid://df45g3pxy3eda" path="res://Scenes/Objects/bed.tscn" id="6_tt06y"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hg4oa"]
texture = ExtResource("2_cglu6")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_6opaa"]
sources/0 = SubResource("TileSetAtlasSource_hg4oa")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6opaa"]
texture = ExtResource("4_hg4oa")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSet" id="TileSet_tt06y"]
sources/0 = SubResource("TileSetAtlasSource_6opaa")

[node name="House" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_sshqa")

[node name="FloorLayer" type="TileMapLayer" parent="."]
z_index = -1
position = Vector2(-13, -31)
tile_set = SubResource("TileSet_6opaa")

[node name="WallsLayer" type="TileMapLayer" parent="."]
y_sort_enabled = true
position = Vector2(-13, -31)
tile_map_data = PackedByteArray("AAANAAkAAAAFAAIAAAANAAgAAAACAAEAAAANAAcAAAACAAEAAAANAAYAAAACAAAAAAAMAAkAAAABAAEAAAAMAAgAAAABAAEAAAAMAAcAAAABAAEAAAAMAAYAAAABAAAAAAALAAkAAAABAAEAAAALAAgAAAABAAEAAAALAAcAAAABAAEAAAALAAYAAAABAAAAAAAKAAkAAAABAAEAAAAKAAgAAAABAAEAAAAKAAcAAAABAAEAAAAKAAYAAAAFAAIAAAAJAAkAAAABAAEAAAAJAAgAAAABAAEAAAAJAAcAAAABAAEAAAAJAAYAAAABAAEAAAAIAAkAAAABAAEAAAAIAAgAAAABAAEAAAAIAAcAAAABAAEAAAAIAAYAAAABAAEAAAAHAAkAAAAGAAEAAAAHAAgAAAABAAEAAAAHAAcAAAABAAEAAAAHAAYAAAABAAEAAAAGAAkAAAABAAIAAAAGAAgAAAABAAEAAAAGAAcAAAABAAEAAAAGAAYAAAABAAEAAAAFAAkAAAABAAIAAAAFAAgAAAABAAEAAAAFAAcAAAABAAEAAAAFAAYAAAAGAAIAAAAEAAkAAAABAAIAAAAEAAgAAAABAAEAAAAEAAcAAAABAAEAAAAEAAYAAAABAAAAAAADAAkAAAAAAAIAAAADAAgAAAAAAAEAAAADAAcAAAAAAAEAAAADAAYAAAAAAAAAAAAPAAwAAAACAAIAAAAPAAsAAAACAAEAAAAPAAoAAAACAAEAAAAPAAkAAAACAAAAAAAOAAwAAAABAAIAAAAOAAsAAAABAAEAAAAOAAoAAAABAAEAAAAOAAkAAAABAAAAAAANAAwAAAABAAIAAAANAAsAAAABAAEAAAANAAoAAAABAAEAAAAMAAwAAAABAAIAAAAMAAsAAAABAAEAAAAMAAoAAAABAAEAAAALAAwAAAABAAIAAAALAAsAAAABAAEAAAALAAoAAAABAAEAAAAKAAwAAAABAAIAAAAKAAsAAAABAAEAAAAKAAoAAAABAAEAAAAJAAwAAAABAAIAAAAJAAsAAAABAAEAAAAJAAoAAAABAAEAAAAIAAwAAAAAAAQAAAAIAAsAAAABAAEAAAAIAAoAAAABAAEAAAAHAAwAAAAAAAIAAAAHAAsAAAAAAAEAAAAHAAoAAAAAAAEAAAAKAAUAAAACAAEAAAAKAAQAAAACAAAAAAAJAAUAAAABAAEAAAAJAAQAAAABAAAAAAAIAAUAAAABAAEAAAAIAAQAAAABAAAAAAAHAAUAAAABAAEAAAAHAAQAAAABAAAAAAAGAAUAAAABAAEAAAAGAAQAAAABAAAAAAAFAAUAAAAAAAEAAAAFAAQAAAAAAAAAAAA=")
tile_set = ExtResource("1_cl7kl")

[node name="RoofLayer" type="TileMapLayer" parent="."]
z_index = 2
tile_map_data = PackedByteArray("AAAGAAoAAAAAAAUAAAAHAAoAAAABAAUAAAAIAAoAAAABAAUAAAAJAAoAAAABAAUAAAAKAAoAAAABAAUAAAALAAoAAAABAAUAAAAMAAoAAAABAAUAAAAOAAoAAAACAAUAAAANAAoAAAABAAUAAAAGAAkAAAAAAAQAAAAGAAgAAAAAAAQAAAAFAAcAAAABAAUAAAAEAAcAAAABAAUAAAADAAcAAAABAAUAAAACAAcAAAAAAAUAAAACAAYAAAABAAIAAAACAAUAAAABAAEAAAACAAQAAAABAAAAAAAHAAkAAAABAAQAAAAIAAkAAAABAAQAAAAJAAkAAAABAAQAAAAKAAkAAAABAAQAAAALAAkAAAABAAQAAAAMAAkAAAABAAQAAAANAAkAAAABAAQAAAANAAgAAAABAAQAAAAMAAgAAAABAAQAAAALAAgAAAABAAQAAAAKAAgAAAABAAQAAAAJAAgAAAABAAQAAAAIAAgAAAABAAQAAAAHAAgAAAABAAQAAAAHAAcAAAABAAQAAAAIAAcAAAABAAQAAAAJAAcAAAABAAQAAAAKAAcAAAABAAQAAAALAAcAAAABAAQAAAALAAYAAAABAAIAAAAKAAYAAAABAAIAAAAJAAYAAAABAAIAAAAIAAYAAAABAAIAAAAHAAYAAAABAAIAAAAGAAYAAAABAAIAAAAFAAYAAAABAAIAAAAEAAYAAAABAAIAAAADAAYAAAABAAIAAAAGAAcAAAABAAQAAAAMAAcAAAABAAQAAAAJAAIAAAABAAAAAAAIAAIAAAABAAAAAAAHAAIAAAABAAAAAAAGAAIAAAABAAAAAAAEAAIAAAABAAAAAAAFAAIAAAABAAAAAAAKAAQAAAABAAAAAAALAAQAAAABAAAAAAAMAAQAAAABAAAAAAADAAQAAAABAAAAAAAEAAQAAAABAAEAAAAEAAMAAAABAAEAAAAFAAMAAAABAAEAAAAGAAMAAAABAAEAAAAHAAMAAAABAAEAAAAIAAMAAAABAAEAAAAJAAMAAAABAAEAAAAJAAQAAAABAAEAAAAIAAQAAAABAAEAAAAHAAQAAAABAAEAAAAGAAQAAAABAAEAAAAFAAQAAAABAAEAAAADAAUAAAABAAEAAAAEAAUAAAABAAEAAAAFAAUAAAABAAEAAAAGAAUAAAABAAEAAAAHAAUAAAABAAEAAAAIAAUAAAABAAEAAAAJAAUAAAABAAEAAAAKAAUAAAABAAEAAAALAAUAAAABAAEAAAAMAAUAAAABAAEAAAAMAAYAAAABAAIAAAANAAcAAAABAAIAAAAOAAkAAAACAAQAAAAOAAgAAAACAAQAAAAOAAcAAAACAAQAAAA=")
tile_set = SubResource("TileSet_tt06y")

[node name="HouseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HouseArea"]
polygon = PackedVector2Array(37, 125, 37, 67, 69, 67, 69, 35, 161, 36, 161, 71, 209, 68, 210, 115, 241, 115, 241, 175, 132, 174, 132, 181, 114, 181, 114, 172, 101, 174, 100, 128, 36, 128)

[node name="TV" parent="." instance=ExtResource("5_6opaa")]
position = Vector2(109, 65)

[node name="Bed" parent="." instance=ExtResource("6_tt06y")]
position = Vector2(183, 94)
